# matrixone

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .licenserc.yml  .markdownlint.yaml  .readthedocs.yaml  1  BUILD.md  CHANGELOG.md  CLAUDE_TODO_2026-07-23.md  CLAUDE_TODO_2026-07-24.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FULL_OUTER_JOIN_PLAN.md  INSTALLATION.md  INVESTIGATION_SUMMARY.md  LICENSE  MORSEL_PIPELINE_DESIGN.md  Makefile  ORDER_LIMIT_OOM_ANALYSIS.md  README.md  README_CN.md  TEST_RESULTS_SUMMARY.md  VIEW_CKP_STATUS.md  ad.txt  ans  api.proto  auto_increment_multi_cn_issue.md  bench_delete_perf_20260122_190508.md  bench_insert_perf_20260122_191042.md  bench_insert_perf_20260123_103322.md  clean.sh  coverage.out  coverage_fulltext.out  coverage_fulltext2.out  coverage_main.out  cuvs_float16.md  (+32 more)
clients/python/: .editorconfig  .flake8  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README_USER.md  READTHEDOCS.md  RELEASE_WORKFLOW.md  TESTING.md  mo_diag.py  pyproject.toml  pytest.ini  requirements-sqlalchemy14.txt  requirements-sqlalchemy20.txt  requirements.txt  setup.py  tox.ini
clients/python/.github/workflows/: compatibility-test.yml  test.yml
clients/python/docs/: Makefile  account_guide.rst  best_practices.rst  branch_guide.rst  clone_guide.rst  conf.py  configuration_guide.rst  connection_hooks_guide.rst  contributing.rst  examples.rst  export_guide.rst  fulltext_guide.rst  index.rst  index_verification_guide.rst  installation.rst  json_guide.rst  load_data_guide.rst  logical_in_guide.rst  make.bat  metadata_guide.rst  mo_diag_guide.rst  moctl_guide.rst  naming_conventions.rst  orm_guide.rst  orm_vector_search_guide.rst  pinecone_guide.rst  pubsub_guide.rst  quickstart.rst  requirements.txt  snapshot_restore_guide.rst  stage_guide.rst  vector_guide.rst
clients/python/docs/api/: account_manager.rst  async_client.rst  branch_builder.rst  cli_tools.rst  client.rst  clone_builder.rst  clone_manager.rst  export_manager.rst  fulltext_index.rst  fulltext_search.rst  index.rst  load_data_manager.rst  logger.rst  metadata_manager.rst  moctl_manager.rst  orm_classes.rst  pitr_manager.rst  pubsub_manager.rst  query_builders.rst  restore_manager.rst  result_set.rst  snapshot_manager.rst  stage_manager.rst  transaction_wrapper.rst  vector_index.rst  vector_manager.rst  vector_query_manager.rst  vector_type.rst  version_manager.rst
clients/python/examples/: README.md  example_01_basic_connection.py  example_02_account_management.py  example_03_async_operations.py  example_04_transaction_management.py  example_05_snapshot_restore.py  example_06_sqlalchemy_integration.py  example_07_advanced_features.py  example_08_pubsub_operations.py  example_09_logger_integration.py  example_10_version_management.py  example_11_matrixone_version_demo.py  example_12_vector_basics.py  example_12_vector_search.py  example_13_vector_index.py  example_13_vector_indexes.py  example_14_vector_index_orm.py  example_14_vector_search.py  example_15_vector_advanced.py  example_15_vector_index_client_chain.py  example_16_vector_comprehensive.py  example_17_hnsw_vector_index.py  example_18_snapshot_orm.py  example_18_specialized_vector_indexes.py  example_19_sqlalchemy_style_orm.py  example_20_sqlalchemy_engine_integration.py  example_21_advanced_orm_features.py  example_22_unified_sql_builder.py  example_23_load_data_operations.py  example_24_query_update.py  example_25_metadata_operations.py  example_26_stage_operations.py  example_27_export_operations.py  example_28_sqlalchemy_select.py  example_29_complex_queries.py  example_30_with_snapshot_method.py  example_31_cdc_operations.py  example_32_branch_operations.py  example_33_ivf_rank_search.py  example_34_branch_diff_count.py  (+10 more)
clients/python/guides/: json_type_guide.md
clients/python/matrixone/: __init__.py  _utils.py  account.py  async_client.py  async_client_append.py  async_metadata_manager.py  async_orm.py  async_vector_index_manager.py  base_client.py  branch.py  branch_builder.py  cdc.py  cli_tools.py  client.py  clone.py  clone_builder.py  config.py  connection_hooks.py  exceptions.py  export.py  fulltext_manager.py  index_utils.py  ivf_rank.py  load_data.py  logger.py  metadata.py  moctl.py  orm.py  pitr.py  pubsub.py  restore.py  search_vector_index.py  session.py  snapshot.py  sql_builder.py  sqlalchemy_select.py  stage.py  vector_manager.py  version.py
clients/python/matrixone/sqlalchemy_ext/: __init__.py  adapters.py  dialect.py  fulltext_index.py  fulltext_search.py  hnsw_config.py  ivf_config.py  json_functions.py  json_type.py  snapshot.py  table_builder.py  vector_index.py  vector_type.py
clients/python/scripts/: check_connection.py  release.py  update_version.py
clients/python/tests/: __init__.py
clients/python/tests/offline/: __init__.py  conftest.py  test_account.py  test_async.py  test_async_client_query_comprehensive.py  test_async_simple.py  test_async_sqlalchemy_transaction.py  test_basic.py  test_branch_builder.py  test_branch_manager.py  test_case_sensitivity.py  test_cdc_sql.py  test_clone_builder.py  test_connection_hooks_offline.py  test_dialect_schema_handling.py  (+51 more)
thirdparties/SimSIMD-6.2.3/: .clang-format  .git-blame-ignore-revs  .gitignore  .npmignore  CONTRIBUTING.md  Package.swift  README.md  build.rs  go.mod  pyproject.toml
thirdparties/SimSIMD-6.2.3/c/: lib.c
thirdparties/SimSIMD-6.2.3/golang/: bench_test.go  simsimd.go
thirdparties/SimSIMD-6.2.3/javascript/: simsimd.ts
thirdparties/SimSIMD-6.2.3/scripts/: bench.js  bench_cosine.rs  bench_sqeuclidean.rs  bench_vectors_live.py  test.py
thirdparties/SimSIMD-6.2.3/swift/: SimSIMD.swift  Test.swift
thirdparties/fp16/: CMakeLists.txt
thirdparties/fp16/bench/: alt-element.cc  from-alt-array.cc  ieee-element.cc  to-alt-array.cc
thirdparties/fp16/cmake/: DownloadGoogleBenchmark.cmake
thirdparties/fp16/test/: bitcasts.cc  ieee-from-fp32-value.cc
thirdparties/usearch-2.17.1/simsimd/: CMakeLists.txt  Cargo.toml  MANIFEST.in  binding.gyp  package-lock.json  package.json  setup.py
(+16519 files in other folders)
